// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Avatar > should render with profile image 1`] = `
<DocumentFragment>
  <div
    class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-11 w-11 text-sm shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="Foo Bar"
        class="h-20 w-20 rounded bg-cover bg-center bg-no-repeat object-cover"
        data-testid="ProfileAvatar__image"
        src="avatarImage"
        title="Foo Bar"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`Avatar > should render with svg 1`] = `
<DocumentFragment>
  <div
    class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-11 w-11 text-sm shrink-0"
    data-testid="Avatar"
  >
    <div
      class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
    >
      <img
        alt="Foo Bar"
        data-testid="ProfileAvatar__svg"
        src="data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" class="picasso" width="100" height="100" viewBox="0 0 100 100"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill="rgb(76, 175, 80)" width="100" height="100"/><circle r="35" cx="40" cy="60" fill="rgb(0, 150, 136)"/><circle r="60" cx="90" cy="40" fill="rgb(139, 195, 74)"/><circle r="45" cx="30" cy="70" fill="rgb(3, 169, 244)"/></svg>"
        title="Foo Bar"
      />
      <span
        class="absolute font-semibold text-white"
      >
        FO
      </span>
    </div>
  </div>
</DocumentFragment>
`;
